# IDS_RS

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  update_pci_ids.ps1  update_pci_ids.sh
.claude/: settings.local.json
src/: classes.rs  database.rs  devices.rs  error.rs  lib.rs  parser.rs  query.rs  types.rs  vendors.rs
tests/: comprehensive.rs
